@@ -46,6 +46,7 @@ group "Elm_Config" struct {
   value "focus_highlight_animate" uchar: 0;
   value "toolbar_shrink_mode" int: 3;
   value "fileselector_expand_enable" uchar: 1;
+  value "fileselector_double_tap_navigation_enable" uchar: 1;
   value "inwin_dialogs_enable" uchar: 0;
   value "icon_size" int: 32;
   value "longpress_timeout" double: 1.0;
